--- a/ui/app/registration/views/newpatient.html
+++ b/ui/app/registration/views/newpatient.html
@@ -7,16 +7,16 @@
                 </legend>
                 <section class="clearfix">
                     <div class="photo-container-wrapper" ng-if="!disablePhotoCapture">
-                        <div class="photo-container">
-                            <div ng-model="patient.image" capture-photo="" class="capture-photo-btn"></div>
+                        <div class="pull-right photo-container">
                             <img class="patient-image" ng-src="{{patient.image}}" fallback-src="../images/blank-user.gif">
+                            <div ng-model="patient.image" capture-photo="" class="capture-photo-btn"></div>
                         </div>
                     </div>
                 </section>
                 <section>
                     <article class="form-field existing-patient">
                         <div class="field-attribute">
-                            <label class="control-label" for="patientID">{{:: getTranslatedPatientIdentifier(patient.primaryIdentifier.identifierType.name) | translate}}
+                            <label class="control-label" for="patientID">{{:: patient.primaryIdentifier.identifierType.name}}
                                 <span ng-show="::patient.primaryIdentifier.identifierType.required && !patient.primaryIdentifier.hasIdentifierSources()" class="asterick">*</span>
                             </label>
                         </div>
@@ -29,7 +29,7 @@
 
                         <div class="field-value field-value-has-identifier">
                             <input type="text" id="registrationNumber" ng-model="patient.primaryIdentifier.registrationNumber"
-                                   placeholder="{{:: getTranslatedPatientIdentifier(patient.primaryIdentifier.identifierType.description)}}" non-blank="patient.primaryIdentifier.isIdentifierRequired()" pattern-validate
+                                   placeholder="{{:: patient.primaryIdentifier.identifierType.description}}" non-blank="patient.primaryIdentifier.isIdentifierRequired()" pattern-validate
                                    ng-change="patient.primaryIdentifier.generate()" focus-on="patient.primaryIdentifier.hasOldIdentifier"
                                    ng-show="patient.primaryIdentifier.hasOldIdentifier || !patient.primaryIdentifier.hasIdentifierSources()" >
                             <div ng-show="::patient.primaryIdentifier.hasIdentifierSources() && showEnterID" class="fl">
