--- a/ui/app/registration/views/patientcommon.html
+++ b/ui/app/registration/views/patientcommon.html
@@ -1,26 +1,6 @@
 <div ng-controller="PatientCommonController">
     <div class="box-container box-container-patient-info patient-common-info-container">
         <section>
-            <article class="form-field patient-name-wrapper" ng-if="::patientConfiguration.local()['showNameField']">
-                <div class="field-attribute">
-                    <label for="patientName">{{::getTranslatedPatientControls(patientConfiguration.local()['labelForNameField'])}}<span class="asterick" ng-show="localLanguageNameIsRequired()">*</span></label>
-                </div>
-                <div class="field-value" id="patientNameLocal">
-                    <span ng-repeat="nameField in patientNameDisplayOrder">
-                        <input type="text" id="givenNameLocal" ng-model="patient.givenNameLocal" pattern-validate
-                               placeholder="{{::'PATIENT_ATTRIBUTE_GIVEN_NAME_LOCAL' | translate}}" focus-me="true"
-                               ng-if="nameField === 'firstName'" ng-required={{localLanguageNameIsRequired('givenNameLocal')}}>
-                        <input ng-show="::showMiddleName" type="text" id="middleNameLocal"
-                               ng-model="patient.middleNameLocal"
-                               pattern-validate
-                               placeholder="{{::'PATIENT_ATTRIBUTE_MIDDLE_NAME_LOCAL' | translate}}"
-                               ng-if="nameField === 'middleName'" ng-required={{localLanguageNameIsRequired('middleNameLocal')}}>
-                        <input type="text" ng-show="::showLastName" id="familyNameLocal" ng-model="patient.familyNameLocal" pattern-validate
-                               placeholder="{{::'PATIENT_ATTRIBUTE_FAMILY_NAME_LOCAL' | translate}}"
-                               ng-if="nameField === 'lastName'" ng-required={{localLanguageNameIsRequired('familyNameLocal')}}>
-                    </span>
-                </div>
-            </article>
             <article class="form-field patient-name-wrapper">
                 <div class="field-attribute">
                     <label for="patientName">{{ ::'REGISTRATION_LABEL_PATIENT_NAME' | translate}}<span class="asterick">*</span></label>
@@ -100,6 +80,26 @@
                            ng-change="setCasteAsLastName()">
                 </div>
             </article>
+            <article class="form-field patient-name-wrapper" ng-if="::patientConfiguration.local()['showNameField']">
+                <div class="field-attribute">
+                    <label for="patientName">{{::getTranslatedPatientControls(patientConfiguration.local()['labelForNameField'])}}<span class="asterick" ng-show="localLanguageNameIsRequired()">*</span></label>
+                </div>
+                <div class="field-value" id="patientNameLocal">
+                    <span ng-repeat="nameField in patientNameDisplayOrder">
+                        <input type="text" id="givenNameLocal" ng-model="patient.givenNameLocal" pattern-validate
+                               placeholder="{{::'PATIENT_ATTRIBUTE_GIVEN_NAME_LOCAL' | translate}}" focus-me="true"
+                               ng-if="nameField === 'firstName'" ng-required={{localLanguageNameIsRequired('givenNameLocal')}}>
+                        <input ng-show="::showMiddleName" type="text" id="middleNameLocal"
+                               ng-model="patient.middleNameLocal"
+                               pattern-validate
+                               placeholder="{{::'PATIENT_ATTRIBUTE_MIDDLE_NAME_LOCAL' | translate}}"
+                               ng-if="nameField === 'middleName'" ng-required={{localLanguageNameIsRequired('middleNameLocal')}}>
+                        <input type="text" ng-show="::showLastName" id="familyNameLocal" ng-model="patient.familyNameLocal" pattern-validate
+                               placeholder="{{::'PATIENT_ATTRIBUTE_FAMILY_NAME_LOCAL' | translate}}"
+                               ng-if="nameField === 'lastName'" ng-required={{localLanguageNameIsRequired('familyNameLocal')}}>
+                    </span>
+                </div>
+            </article>
         </section>
         <section class="form-field form-field-gender">
             <article class="form-field">
@@ -108,9 +108,10 @@
                             class="asterick">*</span></label>
                 </div>
 
-                <div class="field-value">
-                    <select id="gender" ng-model="patient.gender" required="required" ng-disabled = "isDisabledAttribute('gender')" title="{{ 'REGISTRATION_LABEL_SELECT_GENDER'|translate }}"
-                            ng-options="genderMap[genderCode] for genderCode in genderCodes track by genderCode" ng-change="handleUpdate('gender')">
+                <!--Include-->
+                <div class="field-value" ng-click = "Ismale()"> 
+                    <select id="gender" ng-model="patient.gender" required="required" title="{{ 'REGISTRATION_LABEL_SELECT_GENDER'|translate }}"
+                            ng-options="genderMap[genderCode] for genderCode in genderCodes track by genderCode"  ng-change="handleUpdate('gender'); Ismale()">
                         <option value="">{{ ::'REGISTRATION_LABEL_SELECT_GENDER' | translate}}</option>
                     </select>
                     <!--<div class="selectGender">
@@ -121,6 +122,7 @@
                         </ul>
                     </div>-->
                 </div>
+
             </article>
         </section>
         <section class="age-wrapper">
@@ -152,8 +154,96 @@
 
         <section>
             <!--edit patient flow-->
-            <extra-patient-identifiers field-validation="::fieldValidation"></extra-patient-identifiers>
-        </section>
+           <section>
+                <div ng-if="patient.uuid != undefined">
+                    <article ng-repeat="identifier in patient.extraIdentifiers" class="form-field existing-patient">
+                        <div class="field-attribute">
+                            <span ng-if="identifier.identifierType.name =='New HIV Program ID'">
+                                <strong>
+                                    <label class="control-label" for="patientID">{{:: identifier.identifierType.name}}
+                                        <span ng-show=":: identifier.identifierType.required && !identifier.hasIdentifierSources()"
+                                            class="asterick">*
+                                        </span>
+                                    </label>
+                                </strong>
+                            </span>
+                            <span ng-if="identifier.identifierType.name !='New HIV Program ID'">
+                                <label class="control-label" for="patientID">{{:: identifier.identifierType.name}}
+                                    <span ng-show=":: identifier.identifierType.required && !identifier.hasIdentifierSources()"
+                                          class="asterick">*
+                                    </span>
+                                </label>
+                            </span>
+                        </div>
+                        <div class="field-value" ng-if="identifier.identifierType.name =='New HIV Program ID'">
+                            <input type="text" ng-model="identifier.identifier" disabled
+                                   ng-if="identifier.hasIdentifierSources()"/>
+                            <input type="text" id="registrationNumber" ng-model="identifier.registrationNumber" style="font-weight: bold"
+                                   ng-if="!identifier.hasIdentifierSources()"
+                                   non-blank="identifier.identifierType.required && !identifier.hasIdentifierSources()"
+                                   pattern-validate ng-change="identifier.generate()"
+                                   ng-disabled="readOnlyExtraIdentifiers.indexOf(identifier.identifierType.name)>-1">
+                        </div>
+                        <div class="field-value" ng-if="identifier.identifierType.name !='New HIV Program ID'">
+                            <input type="text" ng-model="identifier.identifier" disabled
+                                   ng-if="identifier.hasIdentifierSources()"/>
+
+                            <input type="text" id="registrationNumber" ng-model="identifier.registrationNumber"
+                                   ng-if="!identifier.hasIdentifierSources()"
+                                   non-blank="identifier.identifierType.required && !identifier.hasIdentifierSources()"
+                                   pattern-validate ng-change="identifier.generate()"
+                                   ng-disabled="readOnlyExtraIdentifiers.indexOf(identifier.identifierType.name)>-1">
+                        </div>
+                    </article>
+                </div>
+                <div ng-if="patient.uuid == undefined">
+                    <article ng-repeat="identifier in patient.extraIdentifiers"
+                             class="form-field existing-patient">
+                        <div class="field-attribute">
+                            <label class="control-label" for="patientID">{{:: identifier.identifierType.name}}
+                            <span ng-show="::identifier.identifierType.required && !identifier.hasIdentifierSources()"
+                                  class="asterick">*</span>
+                            </label>
+                        </div>
+                        <div ng-show="::(identifier.hasIdentifierSources() && !identifier.hasIdentifierSourceWithEmptyPrefix())"
+                             class="field-value" id="patientID">
+                            <select id="identifierPrefix" ng-model="identifier.selectedIdentifierSource"
+                                    ng-options="identifierSource.prefix for identifierSource in ::identifier.identifierType.identifierSources"
+                                    ng-change="patient.generateIdentifier(identifier)"
+                                    required>
+                            </select>
+                        </div>
+                        <div class="field-value" ng-if="!identifier.hasIdentifierSources()">
+                            <input type="text" id="registrationNumber" ng-model="identifier.registrationNumber"
+                                   non-blank="identifier.isIdentifierRequired()" pattern-validate
+                                   ng-change="identifier.generate()" focus-on="identifier.hasOldIdentifier"
+                                   ng-show="identifier.hasOldIdentifier || !identifier.hasIdentifierSources()"
+                                   ng-disabled="readOnlyExtraIdentifiers.indexOf(identifier.identifierType.name)>-1">
+                        </div>
+
+                        <div class="field-value field-value-has-identifier"  ng-show="::identifier.hasIdentifierSources()">
+                            <input type="text" id="registrationNumber" ng-model="identifier.registrationNumber"
+                                   non-blank="identifier.isIdentifierRequired()" pattern-validate
+                                   ng-change="identifier.generate()" focus-on="identifier.hasOldIdentifier"
+                                   ng-show="identifier.hasOldIdentifier || !identifier.hasIdentifierSources()"
+                                   ng-disabled="readOnlyExtraIdentifiers.indexOf(identifier.identifierType.name)>-1">
+
+                            <div class="fl">
+                                <div class="field-attribute hasOldIdentifier-field-attribute">
+                                    <label for="hasOldIdentifier" ng-show="::showEnterID" class="control-label">{{::'REGISTRATION_LABEL_ENTER_ID' |
+                                        translate}}</label>
+                                </div>
+                                <div class="field-value">
+                                    <input class="input-label-inline" ng-show="::showEnterID" type="checkbox"
+                                           id="hasOldIdentifier" ng-model="identifier.hasOldIdentifier"
+                                           ng-change="identifier.clearRegistrationNumber()">
+                                </div>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+           </section>
+        </section>+
 
         <legend class="registraion_legend" ng-if="patientConfiguration.customAttributeRows().length > 0">
             <span class="mylegend">{{ ::'REGISTRATION_LABEL_OTHER_INFO' | translate}}</span>
