--- a/ui/app/reports/views/reports.html
+++ b/ui/app/reports/views/reports.html
@@ -3,7 +3,16 @@
     <section class="section-grid" ng-if="::reportsRequiringDateRange.length > 0">
         <h2 class="section-title">{{::'REPORTS_TITLE_KEY' | translate}}</h2>
         <table class="alt-row form">
-            <thead>
+           <thead>
+            <tr>
+                <form class="clearfix" style="background: white;">
+                    <input type="text" ng-model="searchToken" ng-change="searchReport(searchToken)" autofocus="autofocus"
+                        placeholder="{{::'REPORTS_SEARCH_PLACEHOLDER' | translate }}" class="fr" style="margin: 10px;
+                        height: 19px;
+                        width: -webkit-fill-available;
+                        padding-left: 10.5px;" />
+                </form>
+            </tr>
             <tr>
                 <th style="display: flex; justify-content: space-between;">
                     <div>{{::'REPORTS_NAME_HEADER_KEY' | translate}}</div>
@@ -42,13 +51,15 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="report in ::reportsRequiringDateRange" show-if-privilege="{{:: report.requiredPrivilege}}">
-                <td>{{:: report.name |translate }}</td>
+            <tr ng-repeat="report in ::reportsRequiringDateRange" ng-hide="report.hidden" show-if-privilege="{{:: report.requiredPrivilege}}">
+                <td>{{:: report.name | translate}}</td>
                 <td class="reports-start-date">
-                    <input date-converter class="form-field start-date" type="date" max="{{report.stopDate | date:'yyyy-MM-dd'}}" ng-model="report.startDate">  
+                    <input date-converter class="form-field start-date" type="date" max="{{report.stopDate | date:'yyyy-MM-dd'}}"
+                           ng-model="report.startDate">
                 </td>
                 <td class="reports-stop-date">
-                    <input date-converter class="form-field stop-date" type="date" min="{{report.startDate | date:'yyyy-MM-dd'}}" ng-model="report.stopDate">
+                    <input date-converter class="form-field stop-date" type="date" min="{{report.startDate | date:'yyyy-MM-dd'}}"
+                            ng-model="report.stopDate">
                 </td>
                 <td class="reports-format">
                     <select ng-model="report.responseType" ng-options="type as label for (label , type) in ::formats">
@@ -93,7 +104,7 @@
             </thead>
             <tbody>
             <tr ng-repeat="report in ::reportsNotRequiringDateRange" show-if-privilege="{{:: report.requiredPrivilege}}">
-                <td>{{:: report.name |translate }}</td>
+                <td>{{:: report.name | translate}}</td>
                 <td class="reports-format">
                     <select ng-model="report.responseType" ng-options="type as label for (label , type) in ::formats">
                         <option value="">{{'CHOOSE_REPORT_FORMAT'|translate}}</option>
